# ufm_sdk_3.0

./: .gitignore  .gitmodules  .nspect-allowlist.toml  LICENSE  README.md
.ci/: Dockerfile  Dockerfile_hub_upload  Jenkinsfile  Jenkinsfile_nbuprod  Makefile  ci_matrix.yaml  cidemo-init.sh  do_create_ufm_plugin_helm_chart.sh  dockerhub_multiarch_uploader.py  dockerhub_uploader.py  jenkinsfile_hub_uploader.groovy  jenkinsfile_multiarch_hub_uploader.groovy  matrix_job_release.yaml  matrix_job_release_nbuprod.yaml  proj_jjb.yaml  proj_jjb_hub_uploader.yaml  proj_jjb_release.yaml
.ci/pipeline/: proj_jjb_hub_uploader_nbuprod.yaml  proj_jjb_nbuprod.yaml  proj_jjb_release_nbuprod.yaml
.github/: pull_request_template.md
.github/workflows/: helm-template-ci.yml  pdr_plugin_ci_workflow.yml  state-mirror-ci.yml  tfs_plugin_ci_workflow.yml  ufm_log_analyzer_ci_workflow.yml
ai_ufm_plugin_blog/: README.md
ai_ufm_plugin_blog/blog/: create-ufm-plugin-with-ai-skill-first.md  create-ufm-plugin-with-ai.md
api-streaming/: .gitignore  README.md  api-streaming.py  api-streaming.sample.cfg  constants.py
conf/: ufm-sdk.sample.cfg
grafana_infiniband_telemetry/: Infiniband_Telemetry.json  README.md
plugins/: requirements.txt
plugins/SLURM-Integration/: README.md  README.txt  install.sh  ufm-epilog.sh  ufm-prolog.sh  ufm_slurm.conf  ufm_slurm_base.py  ufm_slurm_epilog.py  ufm_slurm_prolog.py  ufm_slurm_utils.py  uninstall.sh
plugins/UFM_DTS_Plugin/: README.md  requirements.txt
plugins/UFM_NDT_Plugin/: README.md  ibnetdiscover-to-ndt.py  ndt_file_creator.py  ndt_poc.py  topo_input_file_creator.py
plugins/advanced_hello_world_plugin/: README.md
plugins/bright-ui/: .gitmodules  README.md  angular.json  karma.conf.js  package.json  proxy.config.json  tsconfig.json  webpack.config.js
plugins/bright_plugin/: README.md  bright_mgr.py  (+1 more)
plugins/ufm-rest-rdma-Plugin/src/service_record/: CMakeLists.txt  Makefile  libservice_record.d  service_record_test  service_record_wrapper_test  services.c  services.h  sr.c  sr.h  sr_test.c  sr_wrapper.c  sr_wrapper.h  sr_wrapper_test.c  test.py
plugins/ufm_rust_client/cli/: Cargo.toml
plugins/ufm_rust_client/cli/src/: create.rs  delete.rs  list.rs  main.rs  version.rs  view.rs
plugins/ufm_rust_client/client/: Cargo.toml
plugins/ufm_rust_client/client/src/: lib.rs  port.rs  rest.rs
scripts/: README.md  eventor.py
topo/: selene.compute.txt  selene.storage.txt  small_topo_file
ufm-plugin-helm-template/: .helmignore  BUILD.md  Chart.yaml  README.md  TEST_PLAN_SERVICE.md  ci-values-affinity.yaml  ci-values-comprehensive.yaml  ci-values-empty-plugins.yaml  ci-values-health-scripts.yaml  ci-values-multi-plugin.yaml  ci-values-per-plugin-disable.yaml  ci-values-service.yaml  ci-values-strategy-rolling.yaml  ci-values-watchdog-disabled.yaml  ci-values.yaml  values.schema.json  values.yaml
ufm-state-mirror/: .dockerignore  BUILD.md  README.md  pyproject.toml  requirements.txt
ufm-stream-to-fluentd/: .gitignore  README.md  requirements.txt  ufm-stream-to-fluentd.py  ufm-stream-to-fluentd.sample.cfg
ufm-telemetry-stream-to-fluentd/: README.md  requirements.txt  ufm-telemetry-stream-to-fluentd.py  ufm-telemetry-stream-to-fluentd.sample.cfg
ufm_actions/: reboot_action.py  sw_upgrade_action.py  ufm_action.py
ufm_devices/: README.md  reboot_action.py  sw_upgrade_action.py  ufm_devices.sample.cfg  ufm_devices_action.py
ufm_events/: ufm_events.py
ufm_logical_servers/: README.md  ufm_logical_servers.py
ufm_pkeys/: README.md  ufm_pkeys.py
ufm_telemetry_stream_to_fluentd/: README.md  requirements.txt
ufm_topology/: README.md  ufm_topology.py
utils/: args_parser.py  base_api.py  config_parser.py  exception_handler.py  job_polling.py  json_schema_validator.py  logger.py  report_polling.py  singleton.py  ufm_rest_client.py  utils.py  xdr_utils.py
zabbix/: README.md
(+951 files in other folders)
